; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_screen.c_screen_destroy.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_screen.c_screen_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_destroy(%struct.screen* %0) #0 {
  %2 = alloca %struct.screen*, align 8
  store %struct.screen* %0, %struct.screen** %2, align 8
  %3 = load %struct.screen*, %struct.screen** %2, align 8
  %4 = getelementptr inbounds %struct.screen, %struct.screen* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.screen*, %struct.screen** %2, align 8
  %9 = getelementptr inbounds %struct.screen, %struct.screen* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @SDL_DestroyTexture(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.screen*, %struct.screen** %2, align 8
  %14 = getelementptr inbounds %struct.screen, %struct.screen* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.screen*, %struct.screen** %2, align 8
  %19 = getelementptr inbounds %struct.screen, %struct.screen* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @SDL_DestroyRenderer(i64 %20)
  br label %22

22:                                               ; preds = %17, %12
  %23 = load %struct.screen*, %struct.screen** %2, align 8
  %24 = getelementptr inbounds %struct.screen, %struct.screen* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %22
  %28 = load %struct.screen*, %struct.screen** %2, align 8
  %29 = getelementptr inbounds %struct.screen, %struct.screen* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @SDL_DestroyWindow(i64 %30)
  br label %32

32:                                               ; preds = %27, %22
  ret void
}

declare dso_local i32 @SDL_DestroyTexture(i64) #1

declare dso_local i32 @SDL_DestroyRenderer(i64) #1

declare dso_local i32 @SDL_DestroyWindow(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
